--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div>
+      <%= render 'layouts/flash_messages' %>
+    
+      <%= yield %>
+    </div>
   </body>
 </html>
