--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -8,9 +8,12 @@
       </ul>
     </div>
   <% end %>
+  
+  <%= f.label :title, 'タイトル' %>
+  <%= f.text_field :title %>
 
-  <%= f.label :content, 'メッセージ' %>
-  <%= f.text_field :ontent %>
+  <%= f.label :content, 'タスク' %>
+  <%= f.text_field :content %>
   
   <%= f.submit '投稿' %>
 <% end %>
